--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install Buildozer and dependencies
       run: |
         pip install --upgrade pip
-        pip install buildozer
+        pip install buildozer cython
 
     - name: Install Android SDK
       run: |
