--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,15 +46,15 @@ jobs:
       run: |
         sudo apt-get install -y openjdk-11-jdk wget unzip
         wget "https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip" -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d cmdline-tools
-        mkdir -p $HOME/Android/Sdk/cmdline-tools/cmdline-tools
-        mv cmdline-tools/cmdline-tools $HOME/Android/Sdk/cmdline-tools/cmdline-tools
+        unzip cmdline-tools.zip -d $HOME/Android/Sdk/cmdline-tools
+        mkdir -p $HOME/Android/Sdk/cmdline-tools/latest
+        mv $HOME/Android/Sdk/cmdline-tools/cmdline-tools/* $HOME/Android/Sdk/cmdline-tools/latest
         echo "ANDROID_HOME=$HOME/Android/Sdk" >> $GITHUB_ENV
-        echo "$HOME/Android/Sdk/cmdline-tools/cmdline-tools/bin" >> $GITHUB_PATH
+        echo "$HOME/Android/Sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$HOME/Android/Sdk/platform-tools" >> $GITHUB_PATH
         echo "$HOME/Android/Sdk/emulator" >> $GITHUB_PATH
-        yes | $HOME/Android/Sdk/cmdline-tools/cmdline-tools/bin/sdkmanager --licenses
-        yes | $HOME/Android/Sdk/cmdline-tools/cmdline-tools/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;35.0.0" "system-images;android-30;default;x86_64"
+        yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        yes | $HOME/Android/Sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;35.0.0" "system-images;android-30;default;x86_64"
 
     - name: Verify Aidl Installation
       run: |
